--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Emmaliu"
-  avatar           : "profile.png"
+  avatar           : "11.png"
   bio              : "First"
   location         : "Location"
   employer         :
