--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Your Name / Site Title"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://Emmaliu2006.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://emmaliu2006.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Emmaliu2006/Emmaliu2006.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Emmaliu"
+  name             : "Emmaliu2006"
   avatar           : "11.png"
   bio              : "First page"
   location         : " WUHAN "
