--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,9 @@ analytics:
 # Site Author
 author:
   name             : "Emmaliu2006"
-  avatar           : "11.png"
-  bio              : "First page"
-  location         : " WUHAN "
+  avatar           : "profile.png"
+  bio              : "ＳＣ３０:）"
+  location         : " HUBEI　WUHAN "
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
