--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Emmaliu2006"
-  avatar           : "profile.png"
+  avatar           : "11.png"
   bio              : "ＳＣ３０:）"
   location         : " HUBEI　WUHAN "
   employer         :
